cmake_minimum_required(VERSION 3.15)
project(XPlot LANGUAGES C CXX)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

find_package(X11)
if(X11_FOUND)
    set(XPLOTSRC src)
    add_library(xplot ${XPLOTSRC}/xplot.cpp ${XPLOTSRC}/xplot.hpp)
    add_executable(XPlotDemo ${XPLOTSRC}/demo.cpp ${XPLOTSRC}/xplot.hpp)
    target_include_directories(xplot INTERFACE /opt/X11/include)
    target_include_directories(xplot PRIVATE ${X11_INCLUDE_DIR})
    target_link_libraries(xplot PRIVATE ${X11_LIBRARIES})
    target_link_libraries(XPlotDemo PRIVATE xplot ${X11_LIBRARIES})
else(X11_FOUND)
    message("Unable to locate X11 on your computer")
endif(X11_FOUND)
